# custom-vector-implementiation

./: CMakeLists.txt
src/: main.cpp  vec_training.cpp  vec_training.hpp
